cluster-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cluster-ingress
spec:
  rules:
  - host: files.domain.local #my Domain will be appended/replaced
    http:
      paths:
        path: /nextcloud
        backend:
          serviceName: nextcloud-server
          servicePort: 80
